Fixes for responsive layout issues

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -26,6 +26,7 @@
 
     @include for-tablet-down() {
         width: 100%;
+        max-width: 100%;
     }
 }
 
