--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -85,16 +85,16 @@
                 clear: both;
                 position: absolute;
                 top: 65px;
-                // position: fixed;
                 display: block;
-                width: 110%;
+                width: 100%;
                 background-color: $color_p300;
-                padding-left: 1.0rem;
+                // padding-left: 1.0rem;
                 left: 0;
                 border-top: 1px solid $color_p700;
                 z-index: 1000;
                 ul {
                     margin-bottom: 0px;
+                    padding-left: 1.0rem;
                     a {
                         float: none;
                         display: block;
